; ModuleID = '/home/carl/AnghaBench/torch7/lib/TH/extr_THGeneral.c_THAllocInternal.c'
source_filename = "/home/carl/AnghaBench/torch7/lib/TH/extr_THGeneral.c_THAllocInternal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @THAllocInternal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @THAllocInternal(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp sgt i32 %4, 5120
  br i1 %5, label %6, label %12

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = call i64 @posix_memalign(i8** %3, i32 64, i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %6
  store i8* null, i8** %3, align 8
  br label %11

11:                                               ; preds = %10, %6
  br label %15

12:                                               ; preds = %1
  %13 = load i32, i32* %2, align 4
  %14 = call i8* @malloc(i32 %13)
  store i8* %14, i8** %3, align 8
  br label %15

15:                                               ; preds = %12, %11
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 @getAllocSize(i8* %16)
  %18 = call i32 @THHeapUpdate(i32 %17)
  %19 = load i8*, i8** %3, align 8
  ret i8* %19
}

declare dso_local i64 @posix_memalign(i8**, i32, i32) #1

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @THHeapUpdate(i32) #1

declare dso_local i32 @getAllocSize(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
